# snek

./: CMakeLists.txt  README.md  snek.c
.github/workflows/: build-and-release.yml
